mdt_cli/tests/snapshots/snapshots__check_diff_text_verbose.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpkzTv7A
    - "--verbose"
    - check
    - "--diff"
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
Scanned project: 2 provider(s), 2 consumer(s)
  Providers:
    @intro (template.t.md)
    @version (template.t.md)

----- stderr -----
Check failed.
  stale consumers: 2

Stale consumers:
  block `intro` at readme.md:3:1
   
   
  -Old intro.
  +Welcome to the project.
   
  block `version` at readme.md:9:10
  -v0.9.0
  +
  +v1.0.0

2 consumer block(s) are out of date. Run `mdt update`.
