mdt_cli/tests/snapshots/snapshots__check_format_github_up_to_date.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpMTk9DT
    - check
    - "--format"
    - github
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All consumer blocks are up to date.

----- stderr -----
