mdt_cli/tests/snapshots/snapshots__check_format_json_stale.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpq9tBml
    - check
    - "--format"
    - json
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
{"diagnostics":[],"errors":[],"ok":false,"orphans":[],"stale":[{"block":"intro","column":1,"file":"readme.md","line":3},{"block":"version","column":10,"file":"readme.md","line":9}],"stale_files":[]}

----- stderr -----
