mdt_cli/tests/snapshots/snapshots__check_format_text_stale.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmp8lOCPL
    - check
    - "--format"
    - text
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  stale consumers: 2

Stale consumers:
  block `intro` at readme.md:3:1
  block `version` at readme.md:9:10

2 consumer block(s) are out of date. Run `mdt update`.
