mdt_cli/tests/snapshots/snapshots__doctor_duplicate_provider_fails.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpdyyVMy
    - doctor
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
mdt doctor
[WARN] Config Discovery       no config file found (using defaults)
       hint: create `mdt.toml`, `.mdt.toml`, or `.config/mdt.toml` to define data and scan rules
[SKIP] Data Sources           skipped because no valid config was loaded
       hint: add a config file to enable explicit data source validation
[PASS] Template Layout        using default template discovery (`*.t.md`)
[FAIL] Duplicate Providers    provider `greeting` is declared in `[TEMP_DIR]/one.t.md` and `[TEMP_DIR]/two.t.md`
       hint: rename one provider to a unique name; provider names must be globally unique
[SKIP] Orphan Consumers       skipped because project scan did not complete
[SKIP] Unused Providers       skipped because project scan did not complete
[SKIP] Parser Diagnostics     skipped because project scan did not complete
[SKIP] Consumer Sync          skipped because the project could not be rendered: duplicate provider `greeting`: defined in `[TEMP_DIR]/one.t.md` and `[TEMP_DIR]/two.t.md`
[WARN] Cache Artifact         cache artifact not found at [TEMP_DIR]/.mdt/cache/index-v2.json
       hint: run `mdt check` or `mdt info` to trigger a scan and write the cache artifact
[PASS] Cache Hash Mode        content-hash verification disabled (mtime + size fingerprints only)
       hint: set `MDT_CACHE_VERIFY_HASH=1` to validate cache keys with content hashes while troubleshooting
[SKIP] Cache Efficiency       cache telemetry unavailable
       hint: ensure cache artifact is valid, then run `mdt info` or `mdt check` a few times to gather telemetry

summary: 2 pass, 2 warn, 1 fail, 6 skip

----- stderr -----
