mdt_cli/tests/snapshots/snapshots__doctor_empty_project.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpisKvgK
    - doctor
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
mdt doctor
[WARN] Config Discovery       no config file found (using defaults)
       hint: create `mdt.toml`, `.mdt.toml`, or `.config/mdt.toml` to define data and scan rules
[SKIP] Data Sources           skipped because no valid config was loaded
       hint: add a config file to enable explicit data source validation
[PASS] Template Layout        using default template discovery (`*.t.md`)
[PASS] Duplicate Providers    provider names are unique
[PASS] Orphan Consumers       every consumer block has a provider
[PASS] Unused Providers       all providers have at least one consumer
[PASS] Parser Diagnostics     no parser diagnostics found
[PASS] Consumer Sync          every linked consumer renders and is up to date
[PASS] Cache Artifact         cache artifact is readable and valid at [TEMP_DIR]/.mdt/cache/index-v2.json
[PASS] Cache Hash Mode        content-hash verification disabled (mtime + size fingerprints only)
       hint: set `MDT_CACHE_VERIFY_HASH=1` to validate cache keys with content hashes while troubleshooting
[SKIP] Cache Efficiency       insufficient history for trend analysis (need at least 3 scans)

summary: 8 pass, 1 warn, 0 fail, 2 skip

----- stderr -----
